# SimpleRenderEngine

./: CMakeLists.txt
cmake/: FindOpenVR.cmake  FindSDL2.cmake  Findglew.cmake  local_config.cmake
cmake/templates/: local_config_template.cmake
examples/: CMakeLists.txt  render-to-texture.cpp
include/: imconfig.h
include/sre/: Camera.hpp  Color.hpp  Framebuffer.hpp  Inspector.hpp  Light.hpp  Log.hpp  Material.hpp  Mesh.hpp  ModelImporter.hpp  RenderPass.hpp  RenderStats.hpp  Renderer.hpp  SDLRenderer.hpp  Shader.hpp  Skybox.hpp  Sprite.hpp  SpriteAtlas.hpp  SpriteBatch.hpp  Texture.hpp  VR.hpp  WorldLights.hpp
include/sre/impl/: Export.hpp  GL.hpp  ShaderSource.inl
src/: CMakeLists.txt
src/embedded_deps/: light_incl.glsl  outline_frag.glsl  outline_vert.glsl  skybox_frag.glsl  standard_blinn_frag.glsl  standard_blinn_phong_frag.glsl  unlit_frag.glsl
src/sre/: Color.cpp  Shader.cpp  Texture.cpp  VR.cpp
src/sre/imgui/: imgui_sre.cpp
test/: CMakeLists.txt  multiple-lights.cpp
